--- a/Changelog
+++ b/Changelog
@@ -16,6 +16,8 @@
 * Improved fitting in cosmics calibration for PbWO4 detectors
 * Removed possibility to perform LED calibration without energy
   calibration file
+* Protection against bad value setting in TAPS database module
+* various bugfixes
 
 0.1.0 : 02 Jul 2008
 * Initial release
