--- a/Changelog
+++ b/Changelog
@@ -13,6 +13,7 @@
 0.1.2 : xx Feb 2008
 * Support for 72 PbWO4 elements
 * Fixed some fitting problems with ROOT 5.22
+* Added PbWO4 veto detectors to the spectra checking module
 * small bugfixes
 
 0.1.1 : 14 Nov 2008
