--- a/Changelog
+++ b/Changelog
@@ -10,17 +10,21 @@
 #####################################################################
 
 
-0.1.3 : 24 Feb 2010
+0.1.4 : Aug 5 2010
+* show block/ring numbers during cosmics calibration
+* skip BaF2 modules of ring 1 and 2 in gain match procedure
+
+0.1.3 : Feb 24 2010
 * Support for the new taps00 server
 * Various small improvements and bugfixes
 
-0.1.2 : xx Feb 2008
+0.1.2 : Feb 18 2008
 * Support for 72 PbWO4 elements
 * Fixed some fitting problems with ROOT 5.22
 * Added PbWO4 veto detectors to the spectra checking module
 * small bugfixes
 
-0.1.1 : 14 Nov 2008
+0.1.1 : Nov 14 2008
 * Peak can be corrected manually in cosmics calibration module
 * HV values are now written channel per channel to the HVServer
 * Protection against bad value setting in TAPS database module
@@ -30,6 +34,6 @@
 * Set PbWO4 mips energy loss to 29.5 MeV
 * various bugfixes
 
-0.1.0 : 02 Jul 2008
+0.1.0 : Jul 2 2008
 * Initial release
 
