--- a/Changelog
+++ b/Changelog
@@ -10,6 +10,9 @@
 #####################################################################
 
 
+0.1.6 : Nov 24 2010
+* fixed axis range issue in the check spectra module
+
 0.1.5 : Nov 5 2010
 * support for QAC pedestal database setting
 * support for hexadecimal value input
