--- a/Changelog
+++ b/Changelog
@@ -10,6 +10,9 @@
 #####################################################################
 
 
+0.1.7 : Dec 16 2010
+* code refactoring
+
 0.1.6 : Nov 24 2010
 * fixed axis range issue in the check spectra module
 
