--- a/Changelog
+++ b/Changelog
@@ -10,6 +10,9 @@
 #####################################################################
 
 
+0.2.1 : Feb 14 2011
+* improved fitting in TDC gain calibration module
+
 0.2.0 : Feb 4 2011
 * added TDC gain calibration module
 
